differenceChecking/disaster_recovery/fsm-teller/tlr-tf-uc5-tf-fr-ow-cpu-act-rev-to-authorize.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tlr-tf-uc5-tf-fr-ow-cpu-act-rev-to-authorize
  name: tlr-tf-uc5-tf-fr-ow-cpu-act-rev-to-authorize
  namespace: fsm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tlr-tf-uc5-tf-fr-ow-cpu-act-rev-to-authorize
  template:
    metadata:
      labels:
        app: tlr-tf-uc5-tf-fr-ow-cpu-act-rev-to-authorize
    spec:
      #knodeSelector:
        #kubernetes.io/role: FSM-WORKER

      hostAliases:
      - ip: "10.90.95.52"
        hostnames:
        - "core.teresol-bahl.com"
      - ip: "10.90.95.53"
        hostnames:
        - "services.teresol-bahl.com"

      containers:
        - envFrom:
            - configMapRef:
                name: fsm-configmap
          image: harbor.teresol.com/fsm/tlr-tf-uc5-tf-fr-ow-cpu-act-rev-to-authorize:1.3.3
          imagePullPolicy: Always
          name: tlr-tf-uc5-tf-fr-ow-cpu-act-rev-to-authorize
          ports:
            - containerPort: 3500
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tlr-tf-uc5-tf-fr-ow-cpu-act-rev-to-authorize
  name: tlr-tf-uc5-tf-fr-ow-cpu-act-rev-to-authorize
  namespace: fsm
spec:
  ports:
    - name: "3500"
      port: 3500
      targetPort: 3500
  selector:
    app: tlr-tf-uc5-tf-fr-ow-cpu-act-rev-to-authorize
  type: ClusterIP

#################################
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-tlr-tf-uc5-tf-fr-ow-cpu-act-rev-to-authorize
  namespace: fsm
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`services.teresol-bahl.com`) && PathPrefix(`/fsm/TLR_TF_UC5_TF_FR_OW_CPU_Act_Rev_to_Authorize`)
      kind: Rule
      middlewares:
        - name: cors-middleware
          namespace: fsm
      services:
        - kind: Service
          name: tlr-tf-uc5-tf-fr-ow-cpu-act-rev-to-authorize
          namespace: fsm
          port: 3500
  tls:
    secretName: bahl-tls-secret
